<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="About Us"
            android:icon="@drawable/home_icon"/>
        <item
            android:id="@+id/nav_search"
            android:title="@string/search_bar1"
            android:icon="@drawable/search_icon"/>
        <item
            android:id="@+id/nav_all_categories"
            android:title="Statistical Data"
            android:icon="@drawable/courses_menu_icon"/>
    </group>
    <item android:title="Profile">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:title="Updates"
                    android:icon="@drawable/padlock_unlock"/>
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile_menu2"
                    android:icon="@drawable/options"/>
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout_menu2"
                    android:icon="@drawable/secured_lock"/>
            </group>

        </menu>
    </item>
    <item android:title="Courses">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_sciences"
                    android:title="@string/course1_menu3"
                    android:icon="@drawable/books"/>
                <item
                    android:id="@+id/nav_technicals"
                    android:title="@string/course2_menu3"
                    android:icon="@drawable/books"/>
                <item
                    android:id="@+id/nav_Business"
                    android:title="@string/course4_menu3"
                    android:icon="@drawable/books"/>
            </group>

        </menu>
    </item>

    </menu>