<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bkg1"
    android:padding="16dp"
    tools:context=".User.AboutUs">

<ImageView
    android:layout_width="80dp"
    android:layout_height="80dp"
    android:layout_gravity="center_horizontal"
    android:src="@drawable/mylogo" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/app_name"
    android:gravity="center"
    android:textColor="@color/teal_700"
    android:textSize="24sp"
    android:textStyle="bold" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:textColor="@color/black"
    android:gravity="center"
    android:textStyle="bold"
    android:text="@string/about_description"
    android:textSize="18sp" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/blue"
        android:text="@string/about_share"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        app:cornerRadius = "20dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:background="@drawable/newlogor"
        android:text="Share with friends "
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/newlogor"
        android:layout_below="@+id/login_button"
        android:text="All is well "
        android:textColor="@color/colorPrimary" />
</LinearLayout>

</LinearLayout>
